# aagman-qa-harness

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
aagman_qa/: auth.py  browser.py  checks.py  clarifications.py  cli.py  config.py  conversation.py  conversation_runner.py  github_publisher.py  interactions.py  llm.py  reporter.py  vision.py
aagman_qa/runners/: backtest.py  chart_query.py  charts.py  options.py  research.py
manifests/: backtest-10-prompts.yaml  backtest-5-prompts.yaml  backtest-mixed-8.yaml  chart-mixed-5.yaml  chart-queries-test.yaml  pr-regression-smoke.yaml  research-casual-fundamental-hybrid.yaml  research-hybrid-test.yaml  research-mixed-7.yaml  research-smoke.yaml  smoke-charts-options.yaml  user-backtests-ema-rsi-bollinger-macd-adx.yaml
reports/2026-07-11-033054-staging-backtest-mixed-8-1d43a9/: report.md  results.json
reports/2026-07-11-034738-staging-research-mixed-7-408af8/: report.md  results.json
reports/2026-07-11-042822-staging-chart-mixed-5-4bf818/: report.md  results.json
tests/: test_conversation.py  test_research_batch.py
